--- a/index.htm
+++ b/index.htm
@@ -35,15 +35,15 @@
 
 
 <p>
-<a href="products.htm"><img src="_derived/products.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Products"></a><br><a href="services.htm"><img src="_derived/services.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Services"></a><br><a href="company.htm"><img src="_derived/company.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Company"></a>
+<a href="products.htm"><img src="/_derived/products.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Products"></a><br><a href="services.htm"><img src="_derived/services.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Services"></a><br><a href="company.htm"><img src="_derived/company.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Company"></a>
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
-<h1><!--mstheme--><font color="#FFCC00">PolarEngineering®<!--mstheme--></font></h1>
+<h1><!--mstheme--><font color="#FFCC00">PolarEngineering <!--mstheme--></font></h1>
 
 
 
-      <p>PolarEngineering® develops and markets <a href="https://www.winwrap.com/"> WinWrap&reg;
+      <p>PolarEngineering  develops and markets <a href="https://www.winwrap.com/"> WinWrap&reg;
       Basic</a>, VBA and VB.NET compatible scripting for Windows&reg; COM and .NET
       applications. </p>
 
@@ -52,7 +52,7 @@
 
 
 
-      <p>PolarEngineering® provides <a href="custom-software.htm">custom
+      <p>PolarEngineering  provides <a href="custom-software.htm">custom
       software</a>, <a href="investigation.htm">technical investigation</a> and <a href="expert-witness.htm">expert
       witness</a> services. </p>
 
@@ -60,7 +60,7 @@
 
 
       <p> &nbsp; </p>
-      <h2><!--mstheme--><font color="#FF9933">PolarEngineering® Contact Information<!--mstheme--></font></h2>
+      <h2><!--mstheme--><font color="#FF9933">PolarEngineering  Contact Information<!--mstheme--></font></h2>
 
       <dl>
         <dt><strong>Telephone</strong> </dt>
@@ -75,7 +75,7 @@
 
 &nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering  is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
