renames _derived, _themes as x*

--- a/custom-software.htm
+++ b/custom-software.htm
@@ -19,12 +19,12 @@
 
 
 <p>
-<a href="index.htm"><img src="_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a> <a href="services.htm"><img src="_derived/up_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Up" align="middle"></a>
+<a href="index.htm"><img src="x_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a> <a href="services.htm"><img src="x_derived/up_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Up" align="middle"></a>
 </p>
 <p>
-<img src="_derived/custom-software.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Custom Software">
+<img src="x_derived/custom-software.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Custom Software">
 <br>
-<img src="_derived/custom-software.htm_cmp_artsy000_hbtn_p.gif" width="140" height="60" border="0" alt="Custom Software" align="middle"> <a href="investigation.htm"><img src="_derived/investigation.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Investigation" align="middle"></a> <a href="expert-witness.htm"><img src="_derived/expert-witness.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Expert Witness" align="middle"></a>
+<img src="x_derived/custom-software.htm_cmp_artsy000_hbtn_p.gif" width="140" height="60" border="0" alt="Custom Software" align="middle"> <a href="investigation.htm"><img src="x_derived/investigation.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Investigation" align="middle"></a> <a href="expert-witness.htm"><img src="x_derived/expert-witness.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Expert Witness" align="middle"></a>
 </p>
 
 
@@ -51,11 +51,11 @@ PolarEngineering® - Custom Software<!--mstheme--></font></h1>
 
 
 <!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
-  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica"> Several custom software projects in progress<!--mstheme--></font><!--msthemelist--></td></tr>
-  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica"> Web data mining<!--mstheme--></font><!--msthemelist--></td></tr>
-  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica">Traveling Software - LapLink Mac<!--mstheme--></font><!--msthemelist--></td></tr>
-  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica">BASIC programs in a ROM<!--mstheme--></font><!--msthemelist--></td></tr>
-  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica"> Radio Shack Model 100 Assembler/Debugger<!--mstheme--></font><!--msthemelist--></td></tr>
+  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="x_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica"> Several custom software projects in progress<!--mstheme--></font><!--msthemelist--></td></tr>
+  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="x_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica"> Web data mining<!--mstheme--></font><!--msthemelist--></td></tr>
+  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="x_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica">Traveling Software - LapLink Mac<!--mstheme--></font><!--msthemelist--></td></tr>
+  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="x_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica">BASIC programs in a ROM<!--mstheme--></font><!--msthemelist--></td></tr>
+  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="x_themes/artsy/artbul1d.gif" width="15" height="15" hspace="13"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica"> Radio Shack Model 100 Assembler/Debugger<!--mstheme--></font><!--msthemelist--></td></tr>
 <!--msthemelist--></table><!--mstheme--><font face="Arial, Helvetica">
 &nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
