--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,7 @@
 
 
 <p>
-<a href="products.htm"><img src="x_derived/products.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Products"></a><br><a href="services.htm"><img src="x_derived/services.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Services"></a><br><a href="company.htm"><img src="x_derived/company.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Company"></a>
+<a href="products.htm"><img src="xx_derived/products.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Products"></a><br><a href="services.htm"><img src="xx_derived/services.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Services"></a><br><a href="company.htm"><img src="xx_derived/company.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Company"></a>
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
@@ -56,7 +56,7 @@
       software</a>, <a href="investigation.htm">technical investigation</a> and <a href="expert-witness.htm">expert
       witness</a> services. </p>
 
-<!--msthemeseparator--><p align="center"><img src="_themes/artsy/arthsepd.gif" width="600" height="10"></p>
+<!--msthemeseparator--><p align="center"><img src="x_themes/artsy/arthsepd.gif" width="600" height="10"></p>
 
 
       <p> &nbsp; </p>
