--- a/products.htm
+++ b/products.htm
@@ -17,12 +17,12 @@
 
 
 <p>
-<a href="index.htm"><img src="_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a>
+<a href="index.htm"><img src="x_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a>
 </p>
 <p>
-<img src="_derived/products.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Products">
+<img src="x_derived/products.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Products">
 <br>
-<img src="_derived/products.htm_cmp_artsy000_hbtn_p.gif" width="140" height="60" border="0" alt="Products" align="middle"> <a href="services.htm"><img src="_derived/services.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Services" align="middle"></a> <a href="company.htm"><img src="_derived/company.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Company" align="middle"></a>
+<img src="x_derived/products.htm_cmp_artsy000_hbtn_p.gif" width="140" height="60" border="0" alt="Products" align="middle"> <a href="services.htm"><img src="x_derived/services.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Services" align="middle"></a> <a href="company.htm"><img src="x_derived/company.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Company" align="middle"></a>
 </p>
 
 
@@ -33,7 +33,7 @@
 
 
 <p>
-<a href="winwrap-basic.htm"><img src="_derived/winwrap-basic.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="WinWrap Basic"></a>
+<a href="winwrap-basic.htm"><img src="x_derived/winwrap-basic.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="WinWrap Basic"></a>
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
