--- a/services.htm
+++ b/services.htm
@@ -17,12 +17,12 @@
 
 
 <p>
-<a href="index.htm"><img src="_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a>
+<a href="index.htm"><img src="x_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a>
 </p>
 <p>
-<img src="_derived/services.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Services">
+<img src="x_derived/services.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Services">
 <br>
-<a href="products.htm"><img src="_derived/products.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Products" align="middle"></a> <img src="_derived/services.htm_cmp_artsy000_hbtn_p.gif" width="140" height="60" border="0" alt="Services" align="middle"> <a href="company.htm"><img src="_derived/company.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Company" align="middle"></a>
+<a href="products.htm"><img src="x_derived/products.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Products" align="middle"></a> <img src="x_derived/services.htm_cmp_artsy000_hbtn_p.gif" width="140" height="60" border="0" alt="Services" align="middle"> <a href="company.htm"><img src="x_derived/company.htm_cmp_artsy000_hbtn.gif" width="140" height="60" border="0" alt="Company" align="middle"></a>
 </p>
 
 
@@ -33,7 +33,7 @@
 
 
 <p>
-<a href="custom-software.htm"><img src="_derived/custom-software.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Custom Software"></a><br><a href="investigation.htm"><img src="_derived/investigation.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Investigation"></a><br><a href="expert-witness.htm"><img src="_derived/expert-witness.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Expert Witness"></a>
+<a href="custom-software.htm"><img src="x_derived/custom-software.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Custom Software"></a><br><a href="investigation.htm"><img src="x_derived/investigation.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Investigation"></a><br><a href="expert-witness.htm"><img src="x_derived/expert-witness.htm_cmp_artsy000_vbtn.gif" width="140" height="60" border="0" alt="Expert Witness"></a>
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
