--- a/winwrap-basic.htm
+++ b/winwrap-basic.htm
@@ -19,10 +19,10 @@
 
 
 <p>
-<a href="index.htm"><img src="_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a> <a href="products.htm"><img src="_derived/up_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Up" align="middle"></a>
+<a href="index.htm"><img src="x_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a> <a href="products.htm"><img src="x_derived/up_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Up" align="middle"></a>
 </p>
 <p>
-<img src="_derived/winwrap-basic.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="WinWrap Basic">
+<img src="x_derived/winwrap-basic.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="WinWrap Basic">
 <br>
 
 </p>
