--- a/work-history.htm
+++ b/work-history.htm
@@ -15,10 +15,10 @@
 
 
 <p>
-<a href="index.htm"><img src="_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a> <a href="company.htm"><img src="_derived/up_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Up" align="middle"></a>
+<a href="index.htm"><img src="x_derived/home_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Home" align="middle"></a> <a href="company.htm"><img src="x_derived/up_cmp_artsy000_gbtn.gif" width="95" height="20" border="0" alt="Up" align="middle"></a>
 </p>
 <p>
-<img src="_derived/work-history.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Work History">
+<img src="x_derived/work-history.htm_cmp_artsy000_bnr.gif" width="600" height="60" border="0" alt="Work History">
 <br>
 
 </p>
