--- a/_borders/bottom.htm
+++ b/_borders/bottom.htm
@@ -13,7 +13,7 @@
 
 <body bgcolor="#000000" text="#FFFFCC" link="#FF9900" vlink="#999900" alink="#669933"><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
