--- a/company.htm
+++ b/company.htm
@@ -36,23 +36,23 @@
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
 <h1><!--mstheme--><font color="#FFCC00">
-PolarEngineering® - Company<!--mstheme--></font></h1>
+PolarEngineering&reg; - Company<!--mstheme--></font></h1>
 
 
-<p>PolarEngineering®, Inc. develops and markets <a href="https://www.winwrap.com/">WinWrap&reg;
+<p>PolarEngineering&reg;, Inc. develops and markets <a href="https://www.winwrap.com/">WinWrap&reg;
 Basic</a>, VBA and VB.NET compatible scripting for Windows&reg; COM and .NET
 applications.<br>
 <br>
-In addition to licensing and supporting WinWrap&reg; Basic, PolarEngineering® does consulting and contract programming. Consulting is charged on a hourly rate, plus travel and per-diem if applicable. Contract programming is quoted by job from full specification proposals.<br>
+In addition to licensing and supporting WinWrap&reg; Basic, PolarEngineering&reg; does consulting and contract programming. Consulting is charged on a hourly rate, plus travel and per-diem if applicable. Contract programming is quoted by job from full specification proposals.<br>
 <br>
 For more information contact:<br>
 <br>
 Tom Bennett<br>
-PolarEngineering®, Inc.<br>
+PolarEngineering&reg;, Inc.<br>
 Nikiski, AK 99635<br>
 Phone: (907) 690-2903<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
