--- a/custom-software.htm
+++ b/custom-software.htm
@@ -40,7 +40,7 @@
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
 <h1><!--mstheme--><font color="#FFCC00">
-PolarEngineering® - Custom Software<!--mstheme--></font></h1>
+PolarEngineering&reg; - Custom Software<!--mstheme--></font></h1>
 
 
 
@@ -59,7 +59,7 @@ PolarEngineering® - Custom Software<!--mstheme--></font></h1>
 <!--msthemelist--></table><!--mstheme--><font face="Arial, Helvetica">
 &nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
