--- a/expert-witness.htm
+++ b/expert-witness.htm
@@ -40,7 +40,7 @@
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
 <h1><!--mstheme--><font color="#FFCC00">
-PolarEngineering® - Expert Witness<!--mstheme--></font></h1>
+PolarEngineering&reg; - Expert Witness<!--mstheme--></font></h1>
 
 
 <p>Expert Witness for technical litigation. Expert witness services
@@ -70,7 +70,7 @@ PolarEngineering® - Expert Witness<!--mstheme--></font></h1>
 
 <!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
