--- a/investigation.htm
+++ b/investigation.htm
@@ -39,7 +39,7 @@
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
-<h1><!--mstheme--><font color="#FFCC00">PolarEngineering® - Investigation<!--mstheme--></font></h1>
+<h1><!--mstheme--><font color="#FFCC00">PolarEngineering&reg; - Investigation<!--mstheme--></font></h1>
 
 
 
@@ -73,7 +73,7 @@
 <!--msthemelist--></table><!--mstheme--><font face="Arial, Helvetica">
 &nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
