--- a/products.htm
+++ b/products.htm
@@ -37,14 +37,14 @@
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
-<h1><!--mstheme--><font color="#FFCC00">PolarEngineering® - Products<!--mstheme--></font></h1>
+<h1><!--mstheme--><font color="#FFCC00">PolarEngineering&reg; - Products<!--mstheme--></font></h1>
 
 
 
 
 
 
-      <p>PolarEngineering®, Inc. develops, supports and markets its products under its
+      <p>PolarEngineering&reg;, Inc. develops, supports and markets its products under its
       WinWrap&reg; trademark.</p>
 
 
@@ -68,7 +68,7 @@
 
 &nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
