--- a/services.htm
+++ b/services.htm
@@ -37,7 +37,7 @@
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
-<h1><!--mstheme--><font color="#FFCC00">PolarEngineering® - Services<!--mstheme--></font></h1>
+<h1><!--mstheme--><font color="#FFCC00">PolarEngineering&reg; - Services<!--mstheme--></font></h1>
 
 
       <dl>
@@ -80,7 +80,7 @@ Phone: (907) 690-2903</dd>
 
 &nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
