--- a/winwrap-basic.htm
+++ b/winwrap-basic.htm
@@ -39,16 +39,16 @@
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
-<h1><!--mstheme--><font color="#FFCC00">PolarEngineering® - WinWrap&reg; Basic<!--mstheme--></font></h1>
+<h1><!--mstheme--><font color="#FFCC00">PolarEngineering&reg; - WinWrap&reg; Basic<!--mstheme--></font></h1>
 
 
-<p>PolarEngineering® develops, supports and markets its products under its
+<p>PolarEngineering&reg; develops, supports and markets its products under its
 WinWrap&reg; trademark.
 <p>Please go to
 <a href="https://www.winwrap.com/">https://www.winwrap.com/</a>
 <!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
