--- a/work-history.htm
+++ b/work-history.htm
@@ -36,7 +36,7 @@
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
 <h1><!--mstheme--><font color="#FFCC00">
-PolarEngineering® - Work History<!--mstheme--></font></h1>
+PolarEngineering&reg; - Work History<!--mstheme--></font></h1>
 
 
 <p>Tom Bennett's Work History<br/>
@@ -218,13 +218,13 @@ Who knows what will happen next...
 For more information contact:<br/>
 <br/>
 Tom Bennett<br/>
- PolarEngineering®, Inc.<br/>
+ PolarEngineering&reg;, Inc.<br/>
 Nikiski, AK 99635<br/>
 Phone: (907) 690-2903
 </p>
 <!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering® is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
