--- a/index.htm
+++ b/index.htm
@@ -39,11 +39,11 @@
 </p>
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
-<h1><!--mstheme--><font color="#FFCC00">PolarEngineering <!--mstheme--></font></h1>
+<h1><!--mstheme--><font color="#FFCC00">PolarEngineering&reg; <!--mstheme--></font></h1>
 
 
 
-      <p>PolarEngineering  develops and markets <a href="https://www.winwrap.com/"> WinWrap&reg;
+      <p>PolarEngineering&reg; develops and markets <a href="https://www.winwrap.com/"> WinWrap&reg;
       Basic</a>, VBA and VB.NET compatible scripting for Windows&reg; COM and .NET
       applications. </p>
 
@@ -52,7 +52,7 @@
 
 
 
-      <p>PolarEngineering  provides <a href="custom-software.htm">custom
+      <p>PolarEngineering&reg; provides <a href="custom-software.htm">custom
       software</a>, <a href="investigation.htm">technical investigation</a> and <a href="expert-witness.htm">expert
       witness</a> services. </p>
 
@@ -60,7 +60,7 @@
 
 
       <p> &nbsp; </p>
-      <h2><!--mstheme--><font color="#FF9933">PolarEngineering  Contact Information<!--mstheme--></font></h2>
+      <h2><!--mstheme--><font color="#FF9933">PolarEngineering&reg; Contact Information<!--mstheme--></font></h2>
 
       <dl>
         <dt><strong>Telephone</strong> </dt>
@@ -75,7 +75,7 @@
 
 &nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-<p>PolarEngineering  is a registered trademark of Polar Engineering, Inc.</p>
+<p>PolarEngineering&reg; is a registered trademark of Polar Engineering, Inc.</p>
 
 
 
