--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@
         <dt><strong>Telephone</strong> </dt>
         <dd><!--webbot bot="Substitution" s-variable="CompanyPhone" startspan -->907-690-2903<!--webbot bot="Substitution" endspan i-checksum="13017" --></dd>
         <dd><!--webbot bot="Substitution" s-variable="CompanyFAX" startspan --> <!--webbot bot="Substitution" endspan i-checksum="32" --> </dd>
-        <dt><strong>Postal address</strong> </dt>
+        <dt><strong>Address</strong> </dt>
         <dd>Polar Engineering, Inc.<br>48342 RJ Avenue<br>
           <!--webbot bot="Substitution" s-variable="CompanyAddress" startspan -->P.O. Box 7188<!--webbot bot="Substitution" endspan i-checksum="27626" --><br>
           Nikiski, AK 99635</dd>
